@@ -1,5 +1,4 @@
 =sys-apps/calculate-9999 amd64 x86
 =sys-apps/calculate-install-2.2.9999 amd64 x86
 
-=sys-apps/portage-2.2_rc67 amd64 x86
-=sys-apps/sandbox-2.2 amd64 x86
+~app-misc/cls-meta-10.5.82 amd64 x86
