@@ -2,4 +2,4 @@ app-misc/cls-meta
 
 sys-apps/calculate
 
-sys-apps/portage
+#sys-apps/portage
