@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cls-meta-10.5.82 (27 May 2010)
+
+  27 May 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cls-meta-10.5.82.ebuild:
+  version bump
+
 *cls-meta-10.4 (05 Apr 2010)
 
   05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
